<resources>
    <string name="app_name">ADDS-DJI</string>
    <string name="app_version">version 0.0.1-alpha</string>

    <string name="project_name">Autonomous Drone Delivery System</string>

    <!--
        activity_initialize_app
    -->
    <string name="label_msdkRegistration">DJI Mobile SDK:</string>
    <string name="msdkRegistration_not_registered_yet">not registered yet</string>
    <string name="msdkRegistration_missing_permissions">FAILED: MISSING PERMISSIONS</string>
    <string name="msdkRegistration_registration_in_progress">registration in progress…</string>
    <string name="msdkRegistration_registered">OK</string>
    <string name="msdkRegistration_registration_failed">REGISTRATION FAILED</string>

    <string name="button_go_fly">Go Fly!</string>


    <string name="label_productModelName">Model:</string>
    <string name="product_not_connected">not connected</string>

    <string name="label_flightControl">Flight Control:</string>
    <string name="flightControl_not_checked_yet">not checked yet</string>
    <string name="flightControl_checking_connection">checking connection...</string>
    <string name="flightControl_not_connected">not connected</string>


    <!--
        activity_drone_info
    -->
    <string name="heading_overview">Overview</string>
    <!-- label_productModelName is defined above. -->


    <string name="heading_aircraft_location">Aircraft Location</string>

    <string name="labeL_gps_signal_level">GPS Signal Level:</string>
    <string name="gps_signal_level">gps_signal_level</string>

    <string name="label_gps_satellites_connected">Satellites Connected:</string>
    <string name="gps_satellites_connected">gps_satellites_connected</string>

    <string name="label_gps_valid">GPS Valid:</string>
    <string name="gps_valid">gps_valid</string>

    <string name="label_gps_location">GPS Location:</string>
    <string name="gps_lat">gps_lat</string>
    <string name="gps_lon">gps_lon</string>

    <string name="label_altitude">Altitude:</string>
    <string name="altitude">altitude</string>

    <string name="label_velocity">Velocity:</string>
    <string name="velocity_x">velocity_x</string>
    <string name="velocity_y">velocity_y</string>
    <string name="velocity_z">velocity_z</string>

    <string name="label_attitude">Attitude</string>
    <string name="pitch">pitch</string>
    <string name="yaw">yaw</string>
    <string name="roll">roll</string>

    <string name="heading_aircraft_power">Aircraft Power</string>

    <string name="label_battery_remaining">Battery Remaining:</string>
    <string name="battery_remaining">battery_remaining</string>

    <string name="battery_remaining_percent">battery_remaining_percent</string>
    <string name="label_battery_remaining_percent">Battery Percent Rem.:</string>

    <string name="remaining_flight_time">remaining_flight_time</string>
    <string name="label_remaining_flight_time">Remaining Flight TIme:</string>

    <string name="remaining_flight_radius">remaining_flight_radius</string>
    <string name="label_remaining_flight_radius">Remaining Flight Radius:</string>


    <!--
        activity_test_flight_modes
    -->
    <string name="test_this_mode_button_text">Test this mode!</string>

    <string name="takeoff_landing_title">Takeoff / Landing</string>
    <string name="takeoff_landing_description">Test the autonomous Takeoff and Landing modes.</string>

    <string name="virtual_stick_basic_title">Virtual Stick Basic</string>
    <string name="virtual_stick_basic_description">Test the Virtual Stick mode. Manually control the pitch and roll of the drone via buttons in the app, instead of the remote controller.</string>

    <string name="virtual_stick_cross_title">Virtual Stick "Cross"</string>
    <string name="virtual_stick_cross_description">An advancement of the previous "Virtual Stick Basic" mode. The drone will autonomously fly a simple cross-/plus-pattern. It is possible to specify both the flight duration and the speed of the drone when it travels from one end to the other.</string>

    <string name="basic_waypoint_mission_title">Basic Waypoint Mission</string>
    <string name="basic_waypoint_mission_description">Manually control the drone and specify multiple waypoints (gps coordinates + altitude) along the way by pressing a button. The drone will then autonomously fly the pre-recorded waypoint mission.</string>

    <string name="infrastructure_waypoint_mission_title">Infrastructure Waypoint Mission</string>
    <string name="infrastructure_waypoint_mission_description">Specify a start-intersection and a list of corridors the drone should follow. The app will request the information of the infrastructure from Flight Control and request clearance for the specified intersections and corridors. The gps-coordinates and altitude will be extracted from the intersections along the flightpath and uploaded to the drone as a waypoint mission.</string>

    <string name="advanced_mission_title">Advanced Waypoint Mission</string>
    <string name="advanced_mission_description">Simplification of the previous "Infrastructure Waypoint Mission" mode by utilizing the request_flightpath api-endpoint of Flight Control. After selecting the destination intersection, the app will request the infrastructure information, a flightpath and clearance. The mission will then be uploaded onto the drone to follow.</string>




    <string name="label_activate_drone">Activate Drone</string>
    <string name="drone_id_not_registered">Drone ID not registered!</string>

    <string name="button_show_drone_info">Show Drone Info</string>
    <string name="button_test_flight_modes">Test Flight Modes</string>

    <string name="label_drone_id">Drone ID:</string>
</resources>