<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="24dp"
        android:paddingVertical="16dp">

        <TextView
            android:id="@+id/txtView_heading_projectName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:text="@string/project_name"
            android:textAlignment="center"
            android:textSize="34sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtView_appVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/app_version"
            android:textSize="16sp"
            android:layout_gravity="center_horizontal"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtView_label_msdkRegistrationState"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_msdkRegistration"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txtView_msdkRegistrationState"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/msdkRegistration_not_registered_yet"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/txtView_label_droneId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_drone_id"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/editTxt_droneId"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text"
                android:text=""
                android:hint="REGISTERED drone id"
                android:layout_marginStart="16dp" />


        </LinearLayout>

        <Button
            android:id="@+id/btn_goFly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_go_fly"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:enabled="false"/>

    </LinearLayout>

</ScrollView>